test/visibility/private/uses/accessMulti2.good
accessMulti2.chpl:3: error: unresolved call 'd()'
