test/visibility/private/uses/accessMulti2.chpl
use definesMultiUse;

d();
// Should fail, Inner2.d() is not visible because the use of Inner2 in
// definesMultiUse is private
